Conexión bd y servicio agregados

--- a/BiblioNetAPP/appsettings.Development.json
+++ b/BiblioNetAPP/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=LENOVO;Database=BiblioNet;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
